fix : mutli css files for better readability

--- a/E-commerce-product-page/ecommerce-product-page-main/src/css/main-style.css
+++ b/E-commerce-product-page/ecommerce-product-page-main/src/css/main-style.css
@@ -20,144 +20,3 @@ body {
     padding: 5vh 10vw;
     /* height: 100vh; */
 }
-
-
-/* 
-=========================
-main navigation styling 
-=========================
-*/
-.main-navigation {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;    
-    flex-wrap: wrap;
-}
-
-/* link contaienr (left side of navigation) */
-.link-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap:3rem;
-}
-
-.link-container .links {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-    
-}
-
-.link-container a {
-    text-decoration: none;
-    color: var(--dark-graiesh-blue);
-    font-weight: 400;
-}
-
-/* info conatiner */
-.info-container {
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-}
-
-.info-container .item-button {
-    background: transparent;
-    border: none;
-    outline: none ;
-}
-
-/* .info-container #cart img{
-    width: 20px; 
-    aspect-ratio: 1 / 1; 
-    object-fit: cover; 
-} */
-
-.info-container #profile img{
-    width: 50px;
-    aspect-ratio: 1 / 1;
-    object-fit: cover;
-}
-
-
-/* 
-=========================
-main product styling
-=========================
-*/
-
-
-/* items images */
-
-.item {
-    display: flex;
-}
-
-.outer-image {
-    width: 50%;
-}
-
-.item-images {
-    justify-self: end;
-    width: 80%;
-    display: grid;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-    grid-template-rows: repeat(4, minmax(0 , 1fr));
-
-    gap: 1rem;
-    grid-template-areas: 
-                    'main main main main'
-                    'main main main main'
-                    'main main main main'
-                    'tum1 tum2 tum3 tum4';    
-}    
-
-/* TODO : these should be buttons (radio buttons) i think */
-.item-images img {
-    border-radius: 1rem;
-    width: 100%;
-    aspect-ratio: 1 / 1;
-    object-fit: cover;
-}
-
-
-/* items info */
-.outer-info {
-    width: 50%;
-    display: flex;
-}
-
-.item-info {
-    width: 60%;
-    align-self: center;
-    justify-self: start;
-    margin-left: 5rem;
-}
-
-.company-name {
-    color: var(--dark-graiesh-blue);
-    font-size:1rem;
-    font-weight: 700;
-    letter-spacing: .1rem;
-}
-
-.item-name {
-    font-weight: 700;
-    font-size: 3rem;
-}
-
-.item-description {
-    color: var(--dark-graiesh-blue);
-    font-size: 1rem;
-    font-weight: 400;
-}
-
-.pricing .wrapper {
-    display: flex;
-    gap: .75rem;
-}
-
-
-
-
-
